@@ -443,7 +443,7 @@ void StreamsPage::exportXml()
 
 void StreamsPage::add()
 {
-    StreamDialog dlg(getCategories(), getGenres(), model.urlHandlers(), this);
+    StreamDialog dlg(getCategories(), getGenres(), MPDConnection::self()->urlHandlers(), this);
 
     if (QDialog::Accepted==dlg.exec()) {
         QString name=dlg.name();
@@ -537,7 +537,7 @@ void StreamsPage::edit()
         return;
     }
 
-    StreamDialog dlg(getCategories(), getGenres(), model.urlHandlers(), this);
+    StreamDialog dlg(getCategories(), getGenres(), MPDConnection::self()->urlHandlers(), this);
     StreamsModel::StreamItem *stream=static_cast<StreamsModel::StreamItem *>(item);
     QString url=stream->url.toString();
     QString cat=stream->parent->name;
