@@ -46,6 +46,7 @@
     extension (mp3, ogg, flac, wma, m4a, m4b, mp4, m4p, wav, wv, wvp, aiff,
     aif, aifc, ape, spx, tta, mpc, mpp, mp+, dff, dsf)
 26. Add import of IceCast and SomaFM streams.
+27. Move server info into a dialog.
 
 0.9.2
 -----
